- remove max heap size setting, increase perm gen space to 128m
git-svn-id: https://harrison.its-technidata.de:444/svn/ingrid/ingrid-iplug-se/branches/3.5.x_new_architecture@25275 d5cb13e6-57fc-0310-9ab5-ddaedd36d86d